refatcotr: 불필요한 샘플 종목 생성 코드 제거